--- a/Sketcher.rc
+++ b/Sketcher.rc
@@ -28,13 +28,13 @@ LANGUAGE LANG_CHINESE, SUBLANG_CHINESE_SIMPLIFIED
 // Dialog
 //
 
-IDD_TEXT_DLG DIALOGEX 0, 0, 309, 176
+IDD_TEXT_DLG DIALOGEX 0, 0, 275, 132
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Dialog"
+CAPTION "Enter Text"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,198,155,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,252,155,50,14
+    DEFPUSHBUTTON   "OK",IDOK,79,111,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,163,109,50,14
     EDITTEXT        IDC_EDIT_TEXT,101,41,87,64,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL
 END
 
@@ -50,9 +50,9 @@ BEGIN
     IDD_TEXT_DLG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 268
         TOPMARGIN, 7
-        BOTTOMMARGIN, 169
+        BOTTOMMARGIN, 125
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -527,6 +527,11 @@ BEGIN
     ID_ELEMENT_LINE         "Draw lines\nLInes"
     ID_ELEMENT_RECTANGLE    "Draw rectangle\nRectangles"
     ID_ELEMENT_CIRCLE       "Draw circle\nCircles"
+END
+
+STRINGTABLE
+BEGIN
+    ID_ELEMENT_TEXT         "Create text \n Text"
 END
 
 #endif    // English (United States) resources
