Add scale indicator in status bars

--- a/Sketcher.vcxproj
+++ b/Sketcher.vcxproj
@@ -207,6 +207,7 @@
     <ClInclude Include="PenDialog.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ScaleDialog.h" />
     <ClInclude Include="Sketcher.h" />
     <ClInclude Include="SketcherDoc.h" />
     <ClInclude Include="SketcherView.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="PenDialog.cpp" />
     <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="ScaleDialog.cpp" />
     <ClCompile Include="Sketcher.cpp" />
     <ClCompile Include="SketcherDoc.cpp" />
     <ClCompile Include="SketcherView.cpp" />
