--- a/Sketcher.vcxproj.filters
+++ b/Sketcher.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="PenDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ScaleDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sketcher.cpp">
@@ -114,6 +117,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PenDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ScaleDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
