--- a/Sketcher.vcxproj
+++ b/Sketcher.vcxproj
@@ -198,6 +198,7 @@
   <ItemGroup>
     <ClInclude Include="ChildFrm.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="ComDialog.h" />
     <ClInclude Include="Curve.h" />
     <ClInclude Include="Element.h" />
     <ClInclude Include="ElementColor.h" />
@@ -219,6 +220,7 @@
   <ItemGroup>
     <ClCompile Include="ChildFrm.cpp" />
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="ComDialog.cpp" />
     <ClCompile Include="Curve.cpp" />
     <ClCompile Include="Element.cpp" />
     <ClCompile Include="Line.cpp" />
