--- a/Sketcher.vcxproj.filters
+++ b/Sketcher.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="ScaleDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ComDialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sketcher.cpp">
@@ -120,6 +123,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ScaleDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ComDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
