--- a/Sketcher.rc
+++ b/Sketcher.rc
@@ -75,7 +75,7 @@ BEGIN
     PUSHBUTTON      "È¡Ïû",IDCANCEL,252,156,50,14
     PUSHBUTTON      "Send",IDC_SEND,76,90,61,26
     PUSHBUTTON      "Receive",IDC_RECEIVE,170,90,61,26
-    LTEXT           "Static",IDC_DISP,83,20,135,62
+    LTEXT           "Static",IDC_DISP,83,20,136,67
 END
 
 
@@ -310,7 +310,7 @@ BEGIN
     END
     POPUP "&COM"
     BEGIN
-        MENUITEM "Serial",                      ID_COM_SERIAL
+        MENUITEM "Serial",                      65535
     END
     MENUITEM "&Window",                     ID_WINDOW
     POPUP "&Help"
