--- a/Sketcher.vcxproj.filters
+++ b/Sketcher.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="ComDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="binary_tree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sketcher.cpp">
@@ -126,6 +129,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ComDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="binary_tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
